--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "mobx-react-router",
+  "version": "6.3.3",
   "description": "Keep your MobX state in sync with react-router",
   "main": "dist/mobx-react-router.js",
   "types": "./types.d.ts",
@@ -49,10 +50,10 @@
   "homepage": "https://github.com/alisd23/mobx-react-router#readme",
   "devDependencies": {
     "@babel/core": "^7.4.0",
-    "@babel/preset-env": "^7.4.2",
-    "@babel/preset-react": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-proposal-decorators": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "@babel/preset-react": "^7.0.0",
     "@types/react-router": "^4.0.2",
     "babel-eslint": "^6.1.2",
     "babel-jest": "^19.0.0",
@@ -66,7 +67,7 @@
     "eslint-plugin-react": "^6.3.0",
     "eslint-plugin-standard": "^2.0.0",
     "jest": "^24.5.0",
-    "mobx": "^5.1.0",
+    "mobx": "6.3.3",
     "react-router": "^5.0.0",
     "rimraf": "^2.5.4",
     "semantic-release": "^4.3.5",
